# theawesomehexapp

./: .ci-exact-head-trigger  .deploy-trigger  .dockerignore  .env.archied.example  .frankenstate  .frankenstate.next  .gitattributes  .gitignore  .public-deploy-trigger  AGENTS.md  AGENT_DIRECTIVE_README.md  ARCHIE_ARCHITECTURE_EXPERIMENTS.md  ARCHIE_AUTOMATION_DIFFICULTY.md  ARCHIE_COMPATIBILITY.md  ARCHIE_DISTILL.md  ARCHIE_ENROLLED_HYBRID_RUNNER.md  ARCHIE_EQUIVALENCE.md  ARCHIE_HOSTED.md  ARCHIE_HYBRID_RUNNER.md  ARCHIE_LAUNCH_PROFILES.md  ARCHIE_LBTB_BENCHMARK.md  ARCHIE_LITE.md  ARCHIE_MAKER_VISION.md  ARCHIE_MIND.md  ARCHIE_PHONE_SIDEWAYS_DESKTOP.md  ARCHIE_PROTOCOL_DECODER.md  ARCHIE_RUNTIME.md  ARCHIE_SOURCE_HOST_MIGRATION.md  ARCHIE_STANDALONE_MIGRATION.md  ARCHIE_STUDENT_FOUNDRY.md  ARCHIE_TRAINING.md  ARCHIE_WORKSPACES.md  Dockerfile.archie  Dockerfile.archied  FOUNDER_SUPERIORITY.md  FOUNDRY_LASSO.md  FULLSTACK_TAKEOVER_RECEIPT.md  HANDOFF.md  INSTALL.md  INTEGRATION_RECEIPT_249_251.md  (+95 more)
.archie/: causal-repair.patch
.archie-bootstrap/: source.tar.gz.sha256  unpack.py
.github/: PULL_REQUEST_TEMPLATE.md  agent-directive-check.sh  (+4 more)
compute/squeeze/: README.md  pyproject.toml
compute/squeeze/squeeze/: __init__.py  capsule.py  checkpoints.py  cli.py  cuda.py  executor.py  policy.py  receipts.py  terminal_adapter.py  workspace.py
compute/squeeze/squeeze/schemas/: job-v1.schema.json  receipt-v1.schema.json
compute/squeeze/tests/: test_capsule.py  test_checkpoints.py  test_cuda.py  test_executor.py  test_policy.py  test_receipts.py  test_workspace.py
(+1788 files in other folders)
