[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archie-distill-core"
version = "0.1.0"
description = "Minimal final-answer teacher distillation, CUDA QLoRA training, and sealed evaluation"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
archie-distill = "archie_distill.cli:main"

[tool.setuptools]
packages = ["archie_distill"]
