[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squeeze-relay"
version = "0.1.0"
description = "Fail-closed local GPU relay for sealed Archie research jobs"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
squeeze = "squeeze.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["squeeze*"]

[tool.setuptools.package-data]
squeeze = ["schemas/*.json"]
